# edgetech-core

./: .gitignore  .gitmodules  BaseDockerfile  BaseMQTTPubSub.py  BaseMQTTPubSubTest.py  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  renovate.json
.github/workflows/: code-quality.yml  dockerbuild.yml  releasetag.yml
ca/: Dockerfile  Dockerfile.ca  README.md  nginx.conf  start_ca.sh
config/: mosquitto.conf
core/: BaseMQTTPubSub.py  BaseMQTTPubSubTest.py  Dockerfile  README.md  __init__.py  base_mqtt_pub_sub.py  base_mqtt_pub_sub_test.py  client.conf  pyproject.toml
device-setup-scripts/: README.md  pi4-setup.sh  pinephone-pro_setup.sh
examples/: Dockerfile  README.md  TelemetryPinephone.py  docker-compose.yaml  pyproject.toml  template_pub_sub.py
mqtt/: Dockerfile  README.md  mosquitto.conf  start_mqtt.sh  trust_ca.sh  update_mqtt_cfg.sh
