[tool.poetry]
name = "core"
version = "0.1.0"
description = "Parent class of all IQT Labs EdgeTech work that wraps functionality to setup and manage MQTT client connections and interactions"
authors = ["Ari <achadda@iqt.org>", "Rob <rcaudill@iqt.org>", "Logan <lkunka@iqt.org>", "Mona <mgogia@iqt.org>", "Jon <jmeade@iqt.org>", "Mike <mchadwick@iqt.org>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
paho-mqtt = "^1.6.1"
pytest = "^7.2.1"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
