[tool.poetry]
name = "examples"
version = "0.1.0"
description = "Template child class MQTT client that builds on top of EdgeTech-Core"
authors = ["arichadda <ari.chadda@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
